src/snapshots/rlox__test_runtime__comments.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        // comment\n        print 1; // number\n        // comment print 1;\n        \")"
---
stdout:
1


stderr:


