src/snapshots/rlox__test_runtime__complex_arithmetic.snap
---
source: src/vm.rs
expression: "crate::util::mock_interpret(\"print 20 * 5 / 0.5 - 100.0;\")"
---
stdout:
100


stderr:


