src/snapshots/rlox__test_runtime__compound_string_comparison.snap
---
source: src/vm.rs
expression: "crate::util::mock_interpret(r#\"print \"foo\" + \"bar\" == \"f\" + \"oo\" + \"bar\";\"#)"
---
stdout:
true


stderr:


