src/snapshots/rlox__test_runtime__concatenation.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(r#\"print \"foo\" + \"bar\";\"#)"
---
stdout:
foobar


stderr:


