src/snapshots/rlox__test_runtime__empty.snap
---
source: src/main.rs
expression: "crate::common::test_util::mock_interpret(\"\")"
---
stdout:


stderr:


