src/snapshots/rlox__test_runtime__empty_initializer_for_loop.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        var a = 0;\n        for ; a < 3; a = a + 1 {\n            print a;\n        }\n        \")"
---
stdout:
0
1
2


stderr:


