src/snapshots/rlox__test_runtime__floating_expr.snap
---
source: src/main.rs
expression: "crate::common::test_util::mock_interpret(\"1;\")"
---
stdout:


stderr:


